# modream

./: CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  README.en.md  README.md  application.yaml  fix_password_hashes.rs  start-dev.ps1  start-dev.sh  stop-dev.sh
application/: Cargo.toml
application/src/: auth_service.rs  image_service.rs  lib.rs  manga_chapter_service.rs  manga_service.rs  media_library_service.rs  user_service.rs
application/src/dto/: auth.rs  manga.rs  manga_chapter.rs  media_library.rs  mod.rs  user.rs
crates/application/: Cargo.toml
crates/application/src/: game_service.rs  image_service.rs  lib.rs  manga_service.rs  media_library_service.rs  movie_service.rs  photo_service.rs  scan_task.rs  user_service.rs
crates/application/src/dto/: common.rs  config.rs  game.rs  manga.rs  manga_chapter.rs  mod.rs  movie.rs  photo.rs  scan_task.rs  user.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/src/: lib.rs  main.rs  server.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/aggregate/: media_library_aggregate.rs
crates/domain/src/entity/: author.rs  manga_chapter.rs  media_library.rs  mod.rs  movie.rs  photo.rs  photo_album.rs  photo_album_item.rs  photo_exif.rs  prelude.rs  user.rs
crates/domain/src/repository/: game.rs  manga.rs  media_library.rs  mod.rs  movie.rs  photo.rs  user.rs
crates/domain/src/service/: game_service.rs  manga_service.rs  media_library_service.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: database.rs  jwt.rs  lib.rs  password.rs
crates/infrastructure/src/file_scanner/: mod.rs  scan.rs  scan_by_game.rs  scan_by_manga.rs  scan_by_video.rs
crates/infrastructure/src/file_scanner/movie_scaner/: helpers.rs  mod.rs  scanner.rs
crates/infrastructure/src/file_scanner/photo_scanner/: helpers.rs  mod.rs  scanner.rs
crates/infrastructure/src/repository/: game.rs  media_library.rs  mod.rs  movie.rs  photo.rs  photo_album.rs  user.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: app.rs  error.rs  lib.rs  main.rs  response.rs  swagger.rs
crates/interfaces/src/api/: config.rs  game.rs  manga.rs  manga_chapter.rs  media_library.rs  mod.rs  movie.rs  photo.rs  user.rs
crates/shared/: Cargo.toml
crates/shared/src/: logger.rs
crates/shared/src/config/: database.rs  gamebox.rs  mod.rs  movie.rs  server.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  MEDIA_TYPE_DEVELOPMENT_GUIDE.md  README.en.md  media-library-config-design.md
domain/: Cargo.toml
domain/src/: lib.rs  value_object.rs
domain/src/aggregate/: media_library_aggregate.rs  mod.rs
domain/src/entity/: game.rs  manga.rs  manga_chapter.rs  media_library.rs  mod.rs  prelude.rs
domain/src/repository/: manga.rs  manga_chapter.rs  mod.rs
domain/src/service/: manga_service.rs  media_library_service.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/src/file_scanner/: mod.rs  scan_by_manga.rs
infrastructure/src/repository/: manga.rs  manga_chapter.rs  media_library.rs  mod.rs  user.rs
interfaces/: Cargo.toml
interfaces/src/: app.rs  server.rs  swagger.rs
interfaces/src/api/: auth.rs  config.rs  game.rs  image.rs  manga.rs  manga_chapter.rs  media_library.rs  mod.rs
migrations/: add_config_json_to_media_library.sql  add_image_paths_to_manga.sql  sqlite_add_config_to_media_library.sql
shared/: Cargo.toml
shared/src/config/: gamebox.rs  mod.rs  server.rs
tauri-app/: AUTHENTICATION_GUIDE.md  QUICK_AUTH_REFERENCE.md  middleware.ts  next.config.js  tailwind.config.js
tauri-app/.augment/rules/: MCP Interactive Feedback Rules.md  Writing rules.md
tauri-app/app/: layout.tsx
tauri-app/app/(main)/: layout.tsx
tauri-app/app/(main)/content/games/: page.tsx
tauri-app/app/(main)/content/mangas/: page.tsx
tauri-app/app/(main)/content/test/: page.tsx
tauri-app/app/(main)/setting/general/: page.tsx
tauri-app/app/(main)/setting/librarysetup/: page.tsx
tauri-app/app/(main)/setting/network/: page.tsx
tauri-app/components/: ProtectedRoute.tsx  sidebar.tsx
tauri-app/components/cards/: anime-card.tsx  game-card.tsx  manga-card.tsx  video-card.tsx
tauri-app/components/layouts/: responsive-grid.tsx
tauri-app/config/: fonts.ts
tauri-app/hooks/: useAuth.ts  useNotification.ts
tauri-app/lib/: api.ts  http.ts  imagePreloader.ts  placeholder-images.ts  tauri.ts
tauri-app/lib/api/: auth.ts  index.ts  manga-chapters.ts  mangas.ts  settings.ts  user.ts
tauri-app/lib/tauri/: commands.ts
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/types/: manga.ts
tauri-app/types/dto/: common.dto.ts  index.ts  media_library.dto.ts  settings.dto.ts  video.dto.ts
web/: .env.example  package.json  tsconfig.json
web/app/(auth)/: layout.tsx
web/app/(auth)/login/: page.tsx
web/app/(main)/: layout.tsx  page.tsx  providers.tsx
web/app/(main)/content/: layout.tsx  page.tsx
web/app/(main)/setting/: layout.tsx
web/components/: icons.tsx  lazy-image.tsx  navbar.tsx
web/components/cards/: game-card.tsx  movie-card.tsx  photo-card.tsx
web/components/icons/: photo-icons.tsx
web/components/video/: video-comments.tsx  video-player.tsx  video-recommendations.tsx
web/config/: site.ts
web/docs/: RUST_BACKEND_CACHE_CONFIG.md
web/hooks/: useAuth.ts  useImagePreload.ts
web/lib/: api.ts  cacheManager.ts  transformers.ts  validators.ts
web/lib/api/: common.ts  games.ts  index.ts  mangas.ts  media_libraries.ts  movies.ts  photos.ts  video.ts
web/lib/utils/: format.ts
web/styles/: globals.css
web/types/: movie.ts  photo.ts
web/types/dto/: game.dto.ts  index.ts  media_library.dto.ts  scan_task.dto.ts  user.dto.ts
(+61 files in other folders)
