[package]
name = "application"
version = "0.1.0"
edition = "2024"

[features]
default = ["gamebox"]
gamebox = ["dep:gamebox", "domain/gamebox", "infrastructure/gamebox"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
domain = { version = "0.1.0", path = "../domain" }
gamebox = { version = "0.1.1", optional = true }
infrastructure = { version = "0.1.0", path = "../infrastructure" }
image = "0.24" # 图片处理库
moka = { version = "0.12", features = ["future"] } # 异步缓存库
natord = "1.0.9" # 自然排序库
sea-orm = "2.0.0-rc.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.48.0", features = ["fs"] } # 异步文件 IO
tracing = { version = "0.1.41", features = ["async-await"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "debug"] }