[package]
name = "desktop"
version = "0.4.0"
description = "Modream Desktop Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "desktop"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
# Tauri 依赖
tauri = { version = "2.7.0", features = [] }

# 集成 WebAPI
interfaces = { path = "../interfaces" }
application = { path = "../application" }
shared = { path = "../shared" }

# 异步运行时
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing = "0.1.41"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
