[package]
name = "domain"
version = "0.4.0"
edition = "2024"

[features]
default = ["gamebox"]
gamebox = ["dep:gamebox"]

[dependencies]
chrono = "0.4.42"
sea-orm = { version = "2.0.0-rc.13", features = [
    "with-chrono",      # 启用 chrono 时间日期库支持：允许在实体中使用 chrono::DateTime 等类型
    "debug-print",      # 启用调试打印功能：为各种 SeaORM 类型实现 Debug trait，方便调试
    "sqlx-sqlite",
    "with-json",        # 启用 JSON 支持：允许在数据库列中存储和查询 JSON 数据
    "runtime-tokio"     # 使用 Tokio 运行时：SeaORM 需要异步运行时，这里选择 Tokio
] }
serde = { version = "1.0.228", features = ["derive"] } # 反序列化yaml配置
serde_json = "1.0" # JSON 序列化/反序列化
utoipa = { version = "5.4.0", features = ["axum_extras", "debug"] } # openapi
anyhow = "1.0.100" # 错误处理
async-trait = "0.1.81" # 异步 trait 支持
tracing = "0.1.41" # 日志记录
gamebox = { version = "0.1.1", optional = true } # 游戏元数据爬虫库
